welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: Missing closing brace `}' assumed here
def posfinale(): Boolean = {
^ZigZag:37: error: ';' expected but 'else' found.
		 else		
                 ^